rework default values to make them easier to use in documentation generation + set up buildSrc